# guile-cvs-archive

./: README
guile/guile-comp/comp/: Makefile.am  Makefile.in  compile.scm  ghobbit.scm
guile/guile-core/lang/: Makefile.am  Makefile.in  elisp.scm
guile/guile-core/lang/elisp/: ChangeLog  Makefile.am  README  buffers.scm  calling.scm  emacs.scm  features.scm  format.scm  fset.scm  guile.scm  keymaps.scm  lists.scm  load.scm  match.scm  numbers.scm  pure.scm  read.scm  signal.scm  strings.scm  symprop.scm  (+5 more)
guile/guile-doc/: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  autogen.sh  configure  configure.in
guile/guile-doc/maint/: ChangeLog  docstring.el
guile/guile-doc/ref/: ChangeLog  Makefile.am  Makefile.in  appendices.texi  data-rep.texi  deprecated.texi  env.texi  expect.texi  gh.texi  goops.texi  guile-ref.texi  guile.texi  intro.texi  mbapi.texi  pi.texi  posix.texi  preface.texi  r4rs.texi  r5rs.texi  scheme-binding.texi  scheme-control.texi  scheme-data.texi  scheme-debug.texi  scheme-evaluation.texi  scheme-exceptions.texi  scheme-ideas.texi  scheme-indices.texi  scheme-intro.texi  scheme-io.texi  scheme-memory.texi  scheme-modules.texi  scheme-options.texi  scheme-procedures.texi  scheme-reading.texi  scheme-scheduling.texi  scheme-translation.texi  scheme-utility.texi  scheme.texi  scm.texi  ti.texi  (+1 more)
guile/guile-doc/sources/: Makefile.in  data-rep.texi
guile/guile-doc/tutorial/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  guile-tut.texi
guile/guile-gtkthreads/: AUTHORS  ChangeLog  GTKTHREADS-VERSION  Makefile.am  Makefile.in  NEWS  README  THANKS  acconfig.h  configure  configure.in  gthread-guile.c  gtkthreads.c  gtkthreads.h  guile-gtkthreads.c  threads.scm
guile/guile-lightning/: ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  assemble-ops.c  assembler.scm  autogen.sh  cleanit.sh  compiler.scm  configure.in  disassemble.c  disassemble.h  i386-dis.c  lightning.c  lightning.ops  lightning.scm  lightning.x  list  peephole.scm  rod.scm  test-old.scm  test.scm
guile/guile-lightning/lightning/: ChangeLog  Makefile.am  Makefile.in  asm-common.h  core-common.h  funcs-common.h  lightning.h
guile/guile-oops/: .cvsignore  ANON-CVS  AUTHORS  BUGS  COPYRIGHTS  ChangeLog  GOOPS-VERSION  INSTALL  Makefile.am  Makefile.in  NEWS  README  RELEASE  SNAPSHOTS  THANKS  TODO  aclocal.m4  active-slot.scm  compile.scm  composite-slot.scm  configure  configure.in  describe.scm  dispatch.scm  fdi.c  goops-snarf.h  goops-tutorial.texi  goops.c  goops.h  goops.info  goops.info-1  goops.info-2  goops.scm  goops.texi  guile-oops.1  guile-oops.c  hierarchy.txt  mop.text  relpath  save.scm  (+3 more)
guile/guile-oops/debian/: Makefile.am  Makefile.in  changelog  control  control-1.3  copyright  files  goops-doc.README.Debian  goops-doc.docs  goops-doc.info  goops-doc.postinst.debhelper  goops-doc.prerm.debhelper  goops.docs  goops.files  goops.postinst.debhelper  goops.prerm.debhelper  goops.substvars  goops.undocumented  libgoops2-dev.docs  libgoops2-dev.postinst.debhelper  libgoops2-dev.prerm.debhelper  libgoops2.links  libgoops2.postinst  libgoops5-dev.docs  libgoops5-dev.files  libgoops5-dev.postinst.debhelper  libgoops5-dev.prerm.debhelper  libgoops5.docs  libgoops5.links.in  libgoops5.postinst  postinst.debhelper  prerm.debhelper  rules  shlibs  substvars
guile/guile-oops/goops/: compat.scm  describe.scm  goops.scm
guile/guile-oops/oop/: compat.scm  describe.scm  goops.scm
guile/guile-rgx-ctax/rx/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  TESTS  W32  aclocal.m4  configure  configure.in  hashrexp.c  inst-rxposix.h  rgx.c  rgx.h  runtests.c  rx.c  rxall.h  rxanal.c  rxanal.h  rxbasic.c  rxbasic.h  rxbitset.h  rxdbug.c  rxgnucomp.c  rxgnucomp.h  rxnfa.c  rxnfa.h  rxnode.c  rxnode.h  rxposix.c  rxposix.h  rxspencer.c  rxspencer.h  rxsuper.c  rxsuper.h  rxunfa.c  testcases.h
guile/guile-scsh/: .cvsignore  COPYING  ChangeLog  INCOMPAT  Makefile.am  Makefile.in  NEWS  README  README.PORT  THANKS  USAGE  aclocal.m4  alt-syntax.scm  ascii.scm  autogen.sh  awk.scm  bitwise.scm  char-p.scm  char-set.scm  configure  configure.in  define-foreign-syntax.scm  defrec.scm  enumconst.scm  env-old.scm  errno.scm  fileinfo.scm  filemtch.scm  filesys.scm  fluid.scm  fname.scm  fr.scm  glob.scm  here.scm  init.scm  let-opt.scm  loophole.scm  make-module-list  netconst.scm  network.scm  (+17 more)
guile/guile-scsh/lib/: ccp.scm  list-lib.scm  string-lib.scm
guile/guile-scsh/rx/: cond-package.scm  let-match.scm  oldfuns.scm  parse.scm  posixstr.scm  re-fold.scm  re-high.scm  re-low.scm  re-subst.scm  re-syntax.scm  re.scm  rx-lib.scm  simp.scm  spencer.scm
guile/guile-tcltk/: .cvsignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  THANKS  acinclude.m4  aclocal.m4  autogen.sh  breakout.scm  compat.h  configure  configure.in  dynlink.scm  graph.scm  gtcltk-module.c  gtcltk.scm  guile-tcl.c  guile-tcl.h  guile-tcltk-aclocal.sh  guile-tcltk.c  guile-tk.c  guile-tk.h  guiledlopenhelper.c  hand.scm  tclInt.h  tclUnixNotfy.c  tcltk.scm
guile/guile-template/: AUTHORS  INSTALL  Makefile.am  README  THANKS  configure.in
guile/guile-tk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  gtk-module.c
guile/guile-tk/Tcl/: Makefile.in  tclConfig.sh
guile/guile-tk/Tk/: Makefile  Makefile.in  configure  configure.in
guile/guile-tk/gtcltk/: guile-tcl.c  guile-tcl.h  guile-tk.h
guile/guile-tk/libgtk/: ChangeLog  Makefile.am  Makefile.in  foo.c  rep1  tk-glue.c
guile/guile-tk/libguiletk/: Makefile.am  Makefile.in  foo.h  gstk.h  gtk-module.c  guile-tk.c  rep1  tk-glue.c  tk-glue.h  tkcmd.c  tkcmd.h
guile/qscheme/v0.6/: .cvsignore  .gdbinit  AUTHORS  CHANGES  INSTALL  LICENCE_EXCEPTION  Makefile.am  README  TODO  array.c  asm.c  asm.h  asm.txt  atom.c  boolean.c  cat.scm  catch.c  chkstack.c  chr.c  cloop.scm  code.c  comp.scm  config.h  config.h.in  configure.in  cont.c  cont.h  dyn.c  dyntype.c  env.c  fib.scm  file.c  format-simple.scm  format.c  gc.txt  hash.c  heap.c  heap.h  list.c  loop.scm  (+55 more)
(+696 files in other folders)
