AC_INIT(Makefile.in)
AM_INIT_AUTOMAKE(guile-doc, 1.4)

AC_ARG_ENABLE(html,
  [  --enable-html           build HTML documentation as well as Info],
  [if test "$enable_html" = "" || test "$enable_html" = y || test "$enable_html" = yes; then
     html_enabled=yes
     AC_PATH_PROG(TEXI2HTML, texi2html, not found)
     if test "$TEXI2HTML" = "not found"; then
       echo
       echo Building HTML documentation requires the \`texi2html\' program,
       echo which appears not to be present on your machine.
       echo
       echo \`texi2html\' is available from
       echo 'http://www.mathematik.uni-kl.de/~obachman/Texi2html/.'
       echo
       echo In the meantime, to build the guile-doc distribution
       echo without HTML enabled, please rerun \`./configure\' without
       echo the \`--enable-html\' option.
       exit -1
     fi
   fi])

AM_CONDITIONAL(HTML, test x$html_enabled = xyes)

AC_OUTPUT(Makefile ref/Makefile tutorial/Makefile sources/Makefile)
