dnl Process this file with autoconf to produce configure.
AC_INIT(goops.c)
AM_INIT_AUTOMAKE(PACKAGE, VERSION, no-define)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_LN_S
AM_PROG_LIBTOOL

### Add the Guile libraries to the link command.
LIBS="$LIBS `guile-config link`"

AC_OUTPUT(Makefile)

dnl Local Variables:
dnl comment-start: "dnl "
dnl comment-end: ""
dnl comment-start-skip: "\\bdnl\\b\\s *"
dnl End:
