## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = foreign

scshdir = $(datadir)/guile/scsh
scsh_DATA = alt-syntax.scm awk.scm bitwise.scm char-set.scm condition.scm \
	defrec.scm ekko.scm enumconst.scm \
	errno.scm fileinfo.scm filemtch.scm filesys.scm \
	fluid.scm fname.scm fr.scm glob.scm here.scm \
	init.scm let-opt.scm netconst.scm \
	network.scm newports.scm population.scm procobj.scm \
	rdelim.scm re.scm receive.scm rw.scm \
	scsh.scm scsh-condition.scm scsh-version.scm \
	sighandlers.scm stringcoll.scm \
	syntax.scm syntax-helpers.scm syscalls.scm \
	time.scm utilities.scm weak.scm

EXTRA_DIST = $(scsh_DATA) INCOMPAT USAGE make-module-list
