dnl Process this file with autoconf to produce a configure script.
AC_INIT(guile-tcl.c)
AM_INIT_AUTOMAKE(guile-tcltk, 1.1, no-define)
AM_MAINTAINER_MODE

#--------------------------------------------------------------------
#
# User options
#
#--------------------------------------------------------------------

AC_ARG_WITH(tcltk,
[  --with-tcltk=DIR        Use DIR/include and DIR/lib for tk and tcl])

AC_ARG_WITH(tcl,
changequote(<, >)dnl
<  --with-tcl=LIBNAME      Name of tcl library to use [LIBNAME=tcl7.5]>,
changequote([, ])dnl
)

AC_ARG_WITH(tk,
changequote(<, >)dnl
<  --with-tk=LIBNAME       Name of tk library to use [LIBNAME=tk4.1]>,
changequote([, ])dnl
)

#--------------------------------------------------------------------

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

if test -z "$with_tcltk" || test "$with_tcltk" = yes; then
### Some compilers don't check /usr/local/include and /usr/local/lib
### by default.  However, that's where Tcl and Tk are usually installed.
test "$GCC" = yes || {
  test -d /usr/local/include && TCLTK_INCLUDE="-I/usr/local/include"
  test -d /usr/local/lib     && TCLTK_LIBDIR="-L/usr/local/lib"
}
else
  TCLTK_INCLUDE="-I$with_tcltk/include"
  TCLTK_LIBDIR="-L$with_tcltk/lib"
fi

if test -n "$with_tcl"; then
  TCLNAME=$with_tcl
else
  TCLNAME=tcl7.5
fi

if test -n "$with_tk"; then
  TKNAME=$with_tk
else
  TKNAME=tk4.1
fi

dnl Checks for libraries.
CFLAGS="$TCLTK_INCLUDE $TCLTK_LIBDIR $CFLAGS"

AC_PATH_XTRA
CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $X_LIBS"
AC_CHECK_LIB(X11, main)

AC_CHECK_LIB(m, main)

### On some systems, the Tcl library contains references to functions from:
### - the dynamic linker library, -ldl
### - the socket library, -lsocket
### - the network socket layer(?) library, -lnsl
### So we need to check for those.
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl, main)

### Find libguile.
AC_CHECK_LIB(qt, main)
AC_CHECK_LIB(guile, scm_shell)
case "$LIBS" in
  *"-lguile"* ) ;;
  * )
    echo -n "the Guile library doesn't seem to be installed; this package " >&2
    echo "requires it" >&2
    exit 2
  ;;
esac

### Use gtcltk-lib only if we seem to have Tcl installed on the
### system.  We really should check for Tk as well, but that involves
### finding all the X libraries that we need to do a complete link.
AC_CHECK_LIB($TCLNAME, Tcl_CreateInterp)
AC_CHECK_LIB($TKNAME, Tk_Init)
case "$LIBS" in
  *"-l${TCLNAME}"*"-l${TKNAME}"* ) ;;
  *"-l${TKNAME}"*"-l${TCLNAME}"* ) ;;
  * )
    echo "Tcl doesn't seem to be installed; this package requires it" >&2
    exit 2
  ;;
esac

### Use gtcltk-lib only if we seem to have Tcl installed on the
### system.  We really should check for Tk as well, but that involves
### finding all the X libraries that we need to do a complete link.
AC_CHECK_LIB($TCLNAME, Tcl_CreateInterp,,, $TCL_EXTRA_LIBS -lm)
case "$LIBS" in
  *"-l${TCLNAME}"* ) ;;
  * )
    echo "Tcl doesn't seem to be installed; this package requires it" >&2
    exit 2
  ;;
esac

dnl Checks for library functions.
AC_SUBST(TCL_EXTRA_LIBS)

AC_OUTPUT(Makefile)
