dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)
AM_INIT_AUTOMAKE(guile-tk, 0.1, no-define)
AM_MAINTAINER_MODE

AC_CONFIG_SUBDIRS(Tcl Tk)

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

AC_PATH_XTRA
CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $X_LIBS"
AC_CHECK_LIB(X11, main)

AC_CHECK_LIB(m, main)

### On some systems, the Tcl library contains references to functions from:
### - the dynamic linker library, -ldl
### - the socket library, -lsocket
### - the network socket layer(?) library, -lnsl
### So we need to check for those.
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl, main)

### Find libguile.
AC_CHECK_LIB(qt, main)
AC_CHECK_LIB(guile, scm_shell)
case "$LIBS" in
  *"-lguile"* ) ;;
  * )
    echo -n "the Guile library doesn't seem to be installed; this package " >&2
    echo "requires it" >&2
    exit 2
  ;;
esac

dnl Checks for library functions.
AC_SUBST(TCL_EXTRA_LIBS)

AC_OUTPUT(Makefile libgtk/Makefile)
