## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = guile-tut.texi

guile_tut_TEXINFOS = guile-tut.texi

## Just a convenience var; no special significance.
#dist_texis = guile-ref.texi ci.texi pi.texi vi.texi ti.texi

## FIXME: for now we just omit ../guile-user/more-resources.texi from
## the dependencies.  We don't want to try to put it into the
## distribution.
#guile_programmer_TEXINFOS = $(dist_texis)

#EXTRA_DIST = $(dist_texis)
